--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "tsx watch src/simulation/scenarios/TokenEcosystemScenario.ts",
-    "start": "tsx src/simulation/scenarios/TokenEcosystemScenario.ts",
+    "dev:eco": "tsx watch src/simulation/scenarios/TokenEcosystemScenario.ts",
+    "dev:transfer": "tsx watch src/simulation/scenarios/BasicTransferScenario.ts",
+    "dev:swap": "tsx watch src/simulation/scenarios/MultiAgentSwapScenario.ts",
+    "start:eco": "tsx src/simulation/scenarios/TokenEcosystemScenario.ts",
+    "start:transfer": "tsx src/simulation/scenarios/BasicTransferScenario.ts",
+    "start:swap": "tsx src/simulation/scenarios/MultiAgentSwapScenario.ts",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:integration": "vitest run --config vitest.integration.config.ts",
@@ -23,6 +27,8 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@orca-so/whirlpools": "^7.0.1",
+    "@solana/kit": "^5.5.1",
     "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.98.0",
     "dotenv": "^16.4.7",
