feat: Introduce CLI for wallet management and intent execution, add a new simulation scenario, update key management, and include new intent examples.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "start:eco": "tsx src/simulation/scenarios/TokenEcosystemScenario.ts",
     "start:transfer": "tsx src/simulation/scenarios/BasicTransferScenario.ts",
     "start:swap": "tsx src/simulation/scenarios/MultiAgentSwapScenario.ts",
+    "demo": "tsx src/simulation/scenarios/BountyDemoScenario.ts",
+    "intent-runner": "tsx src/cli/run-intent.ts",
+    "wallets": "tsx src/cli/manage-wallets.ts",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:integration": "vitest run --config vitest.integration.config.ts",
